tmp/funnel-output_path-BJTuRn1J.tmp/gyak09/tests/unit/pods/errors/new/controller-test.jshint.js
/home/ubuntu/workspace/targykezelo/tmp/jshinter-output_path-DEMzuOVO.tmp/unit/pods/errors/new/controller-test.jshint.js